# trainml-cli

./: .gitignore  LICENSE  README.md  auth.py  create_dataset_and_training_job.py  datasets.py  jobs.py  poc.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.json  trainml.py
examples/: create_dataset_and_training_job.py  local_storage.py  training_inference_pipeline.py
tests/: README.md  conftest.py  running_tests.md  test_datasets.py  test_environments.py  test_gpu_types.py  test_jobs.py
tests/integration/: conftest.py  test_checkpoints_integration.py  test_datasets_integration.py  test_environments_integration.py  test_gpu_types_integration.py  test_jobs_integration.py  test_models_integration.py  test_projects_integration.py  test_providers_integration.py  test_volumes_integration.py
tests/integration/cloudbender/: conftest.py  test_providers_integration.py  test_regions_integration.py  test_services_integration.py
tests/integration/projects/: conftest.py  test_projects_credentials_integration.py  test_projects_data_connectors_integration.py  test_projects_datastores_integration.py  test_projects_integration.py  test_projects_keys_integration.py  test_projects_members_integration.py  test_projects_secrets_integration.py  test_projects_services_integration.py
tests/unit/: conftest.py  test_auth.py  test_auth_unit.py  test_checkpoints_unit.py  test_connections_unit.py  test_datasets_unit.py  test_environments_unit.py  test_exceptions.py  test_gpu_types_unit.py  test_jobs_unit.py  test_main_unit.py  test_models_unit.py  test_projects_unit.py  test_providers_unit.py  test_trainml.py  test_trainml_unit.py  test_volumes_unit.py
tests/unit/cli/: conftest.py  test_cli_checkpoint_unit.py  test_cli_datasets_unit.py  test_cli_gpu_unit.py  (+5 more)
trainml/: __init__.py  auth.py  checkpoints.py  connections.py  datasets.py  environments.py  exceptions.py  gpu_types.py  jobs.py  models.py  projects.py  providers.py  script.py  trainml.py  volumes.py
trainml/cli/: __init__.py  checkpoint.py  connection.py  dataset.py  environment.py  gpu.py  job.py  model.py  project.py  provider.py  volume.py
trainml/cloudbender/: __init__.py  cloudbender.py  data_connectors.py  datastores.py  device_configs.py  devices.py  nodes.py  providers.py  regions.py  reservations.py  services.py
trainml/projects/: __init__.py  credentials.py  data_connectors.py  datastores.py  keys.py  members.py  projects.py  secrets.py  services.py
trainml/utils/: __init__.py  auth.py  transfer.py
(+51 files in other folders)
